modem-at broken because of mixed use of GSimpleAsyncResult and GTask
When I do mmcli -m 0 --3gpp-register-home
with Huawei E1732, I always get timeout error.
The following is printed at the daemon side:
(ModemManager:6525): GLib-GObject-WARNING **: 09:01:13.869: invalid cast from 'GTask' to 'GSimpleAsyncResult'
(ModemManager:6525): GLib-GIO-CRITICAL **: 09:01:13.869: g_simple_async_result_propagate_error: assertion 'G_IS_SIMPLE_ASYNC_RESULT (simple)' failed
(ModemManager:6525): GLib-GObject-WARNING **: 09:01:13.869: invalid cast from 'GTask' to 'GSimpleAsyncResult'
(ModemManager:6525): GLib-GIO-CRITICAL **: 09:01:13.869: g_simple_async_result_get_op_res_gpointer: assertion 'G_IS_SIMPLE_ASYNC_RESULT (simple)' failed
(ModemManager:6525): GLib-GIO-CRITICAL **: 09:01:13.869: g_dbus_method_invocation_take_error: assertion 'error != NULL' failed
I have some issues getting a good bt. Here is what I got anyway:
3 in g_type_check_instance_cast of /lib/x86_64-linux-gnu/libgobject-2.0.so.0
4 in mm_base_modem_at_command_full_finish of mm-base-modem-at.c:468
5 in modem_3gpp_register_in_network_finish of mm-broadband-modem.c:4549
6 in handle_register_ready of mm-iface-modem-3gpp.c:500
Thanks
Edited by Mohammed Sadiq