iface-modem-3gpp: use correct finish() method to complete user registration

https://gitlab.freedesktop.org/mobile-broadband/ModemManager/issues/131
(cherry picked from commit d1b716abaf4fca0a31498ce77b17fbc7216a5936)